Additional JVM options.